<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/SignIn"
        android:textColor="@color/colorPurpleApp"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/llEmail"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:startIconDrawable="@drawable/ic_round_person"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLogin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:background="@null"
            android:inputType="textEmailAddress"
            android:textStyle="bold"
            android:hint="@string/e_mail"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/llPassword"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginTop="30dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:endIconDrawable="@drawable/round_remove_red_eye_24"
        app:endIconMode="custom"
        app:endIconCheckable="true"
        app:startIconDrawable="@drawable/ic_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llEmail"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textStyle="bold"
            android:inputType="textPassword"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/llPassword"
        app:layout_constraintTop_toBottomOf="@id/llPassword"
        android:text="@string/forgotpassword"/>


            <Button
                android:id="@+id/btLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorPurpleApp"
                android:text="@string/login"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/llPassword"
                app:layout_constraintStart_toStartOf="@id/llPassword"
                app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />

            <TextView
                android:id="@+id/tvCreateNewAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/create_new_account"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/btLogin"
                app:layout_constraintStart_toStartOf="@id/btLogin"
                app:layout_constraintTop_toBottomOf="@+id/view11" />


            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/OrSignInwith"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btLogin" />


    <View
        android:id="@+id/view10"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@color/colorPurpleApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <View
                android:id="@+id/view11"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="32dp"
                android:background="@color/colorPurpleApp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btLoginByPhone" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btLoginGoogle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorPurpleApp"
                android:text="@string/LoginwithGoogle"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:paddingStart="20dp"
                app:icon="@drawable/googleg_disabled_color_18"
                app:iconSize="30dp"
                app:layout_constraintEnd_toEndOf="@+id/btLogin"
                app:layout_constraintStart_toStartOf="@+id/btLogin"
                app:layout_constraintTop_toBottomOf="@+id/view10" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btLoginByPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorPurpleApp"
                android:text="@string/LoginwithPhone"
                android:textSize="20sp"
                android:padding="10dp"
                android:textStyle="bold"
                android:paddingStart="20dp"
                app:icon="@drawable/ic_round_local_phone_24"
                app:iconSize="30dp"
                app:layout_constraintEnd_toEndOf="@+id/btLoginGoogle"
                app:layout_constraintStart_toStartOf="@+id/btLoginGoogle"
                app:layout_constraintTop_toBottomOf="@+id/btLoginGoogle" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</ScrollView>